fix cards overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,8 @@
     text-wrap: balance;
   }
 }
+
+.swiper-container {
+  overflow: hidden; /* Evita que el contenido desborde el contenedor */
+  max-width: 100vw; /* Asegura que el swiper no crezca más allá del viewport */
+}
